--- a/MoonProject/ProjectNotebook.ipynb
+++ b/MoonProject/ProjectNotebook.ipynb
@@ -31,7 +31,9 @@
     "\n",
     "From this point, I had to make sure my code was functional, and the bare minimums for my standards worked, that the moon-phase worked, the moon-rise/set worked, and the image corresponding to the moon-phase was accurate. \n",
     "\n",
-    "After I got that going I had to go back and spend a lot of time re-writing code according to PEP8, and adding in documentation, and fixing bugs that cropped up when re-writing code, and adding in more tests to ensure there's a lower likelihood of something going wrong somewhere. "
+    "After I got that going I had to go back and spend a lot of time re-writing code according to PEP8, and adding in documentation, and fixing bugs that cropped up when re-writing code, and adding in more tests to ensure there's a lower likelihood of something going wrong somewhere.\n",
+    "\n",
+    "Then to polish everything up, I found out about the existence of Pylint & PyTest. I worked to make sure my Pylint scores were as high as reasonably possible, without suppressing anything. I also worked to ensure that my tests were PyTest compatible and ran properly as well."
    ]
   },
   {
@@ -176,8 +178,10 @@
    "metadata": {},
    "source": [
     "## Justification for Extra-Credit\n",
-    "Why my approach was particularly difficult/challenging for me:\n",
-    "1. Researching on how to go about calculating the moon-phase and moon-rise/moon-set was a particularly difficult task for me. To get accurate results for the 4 critical moon phases (new moon, first quarter, full moon, third quarter) requires a lot of high-level algorithms, and a lot of variables. Even if none of that made it into my final project, there was an obscene amount of background research conducted on this project to figure out how I could possibly mathematically calculate the moon-phase. Also, the approach of getting to the point where I decided upon the moon-phase algorithm I found, was way above my comfort level and was quite challenging to even understand the content of what was being talked about in some discussions of the moon-phase algorithms. I don't even want to get started on the mathematical calculations of the moon-rise/moon-set algorithms and what those entail. I don't mind math, but it just boggled my mind. \n",
+    "### Why my approach was particularly difficult/challenging for me:\n",
+    "While the algorithm to calculate the moon-phase & the process of how I obtain the moon-rise & moon-set are fairly simple, the approach to getting to that point was particularly difficult & challenging.\n",
+    "\n",
+    "The approach to find a suitable algorithm for the moon-phase & moon-rise/moon-set was exceedingly difficult for me, due to the sparse existence of algorithms in general, particularly simple ones. Thus, during my research/discovery phase, there was a large amount of time put into trying to translate complex equations, and math that was just beyond me, into a viable product in python, especially when I was in the pursuit of ultra-accurate moon-phase calculations, which had to be given up in the end because I could not find a way even with an obscene amount of time put in, to find a way around the floating point arithmetic nature of Python. I'm confident in the future, provided I'm more adept at Python, I could, but given my current mathematical understanding and novice Python familiarity, it was beyond me.\n",
     "\n",
     "Some content I read through during research component of this project:\n",
     "1. Astronomical Algorithms, 2nd Edition, by Jean Meeus\n",
@@ -189,13 +193,18 @@
     "4. The Computation of the Times of Rising and Setting of the Moon\n",
     "    (https://tinyurl.com/ydcs4ykz)\n",
     "    \n",
-    "Why my work goes beyond the minimal project requirements.\n",
+    "### Why my work goes beyond the minimal project requirements.\n",
     "1. I had to learn how to use Tkinter for this project\n",
-    "I had absolutely 0 knowledge of Tkinter prior to this project and learning something from scratch was just brutal, and the documentation wasn't as forthcoming as the regular python documentation that I'm used too. I spent a lot of time tinkering with the UI set-up to make sure it was how I wanted.\n",
+    "I had absolutely 0 knowledge of Tkinter prior to this project and learning something from scratch with documentation was generally lackluster, led to myself spending a lot of time tinkering with the UI set-up to make sure it was how I wanted.\n",
     "2. I had to use web-scraping for this project\n",
-    "I had 1 experience of using beautifulsoup briefly, but it was still really challenging for me because I had to figure out how to scrape a web-site but not have it write to a csv file but to a GUI ouput, figure out how to handle specific cases of how the website got formatted, and debugging was really difficult for me because I wasn't taught on it in class nor familiar with beautifulsoup, so having to go through the process of figuring what is going wrong, why it's going wrong, and what I need to do to fix it was brutal.\n",
-    "3. I wrote exhaustive tests for my functions.\n",
-    "The minimal project requirements state that to use \"at least two code tests\", well I wrote 8 tests, 5 of which were for the function of determining the moon-phase, to ensure my program was going to execute as intended with a minimal likelihood for issues, in spite of the length of the synodic lunar month varying quite a bit month to month at times. Likewies, I wrote exhaustive asserts for the expected outputs of other functions given certain inputs to make sure that my functions are rigorous and can handle test-cases well. (I put a lot of time making sure my tests all passed without issues and debugging TT_TT)."
+    "I had 1 experience of using beautifulsoup briefly, but it was still really challenging for me because I had to figure out how to scrape a web-site but not have it write to a csv file but to a GUI ouput. The intent of doing this was to absolutely minimize the user-based load onto the web-site I was scraping, so that I am not overloading their servers for the regular people trying to use it in any capacity. It was also particularly difficult to figure out how to handle specific cases of how the website got formatted, and debugging was really difficult for me because I wasn't familiar with beautifulsoup errors, so having to go through the process of figuring what is going wrong, why it's going wrong, and what I need to do to fix was above and beyond the minimal project requirements and expectations.\n",
+    "3. I made sure that all of my .py files scored above a 9/10 on Pylint\n",
+    "Obviously, the goal of a higher score in Pylint is better code, not just suppressing anything for the sake of a clean report.\n",
+    "I'm arguing that my work goes beyond the minimal project requirements because I am NOT suppressing anything for the sake of a clean report, and have legitimately improved my code to the point where all of my .py files score above a 9/10. (My functions.py is actually 10/10, but I think it's more impressive to ensure across the board that everything is excellent).\n",
+    "4. I wrote exhaustive tests for my functions, which passes Pytest flawlessly!\n",
+    "The minimal project requirements state that to use \"at least two code tests\", well I wrote 8 test functions, 5 of which were for the function of determining the moon-phase, to ensure my program was going to execute as intended with a minimal likelihood for issues, in spite of the length of the synodic lunar month varying quite a bit month to month at times. This may not sound like a lot, but if you take a look at my test_functions.py, I promise you, I tested a lot. Likewise, I wrote exhaustive asserts, with significantly extensive test coverage for the expected outputs of other functions given certain inputs to make sure that my functions are rigorous and can handle the vast majority of edge-cases.\n",
+    "\n",
+    "Image Proof of Pylint & Pytest: https://imgur.com/a/WMYy8oc"
    ]
   },
   {
